# codex

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/codex/: core.hpp  env.hpp  str.hpp
tests/: env_test.cpp  str_test.cpp  test_main.cpp
